# full-page-recommender

./: .gitignore  Cargo.toml  Makefile  README.md  full_page_recommender.pyi  main.py  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
benches/: ease_benchmark.rs
python/full_page_recommender/: __init__.py  data_frames.py  full_page_recommender.pyi
python/tests/: test_full_page_recommender.py
src/: collection.rs  collections.rs  ease.rs  lib.rs  main.rs  ranker.rs  recommender_state.rs
