[package]
name = "full-page-recommender"
version = "0.1.0"
edition = "2021"

[lib]
name = "full_page_recommender"

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3", "abi3-py310"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.9.1"
