[tool.poetry]
name = "full-page-recommendations"
version = "0.1.0"
description = ""
authors = ["Jan Kislinger <jan.kislinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.4"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
