[tool.poetry]
name = "full-page-recommender"
version = "0.1.0"
description = ""
authors = ["Jan Kislinger <jan.kislinger@gmail.com>"]
readme = "README.md"
packages = [{ include = "python" }]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
maturin = "^1.7.4"
pytest = "^8.3.3"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
