[project]
name = "full-page-recommender"
version = "0.1.0"
description = ""
authors = [
    { name = "Jan Kislinger", email = "jan.kislinger@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.pytest.ini_options]
addopts = "--doctest-modules"


